--- a/imitate-labs-react/src/index.css
+++ b/imitate-labs-react/src/index.css
@@ -13,6 +13,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  width: 100vw;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
